Basic show case

--- a/index.html
+++ b/index.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header class="ligh-bg">
-      <h1 class="header__title">Software &amp; Algorithm Engineer</h1>
-      <p class="header__remark">The sky is the limit</p>
-      <hr class="header__hr" />
-      <section class="header__social-meadia">
-        <a href="" class="btn btn--bg-dark btn--hover-enlarge">LinkedIn</a>
-        <a href="" class="btn btn--bg-dark btn--hover-enlarge">GitHub</a>
-        <a href="" class="btn btn--bg-dark btn--hover-enlarge">twitter</a>
-        <a href="" class="btn btn--bg-dark btn--hover-enlarge">facebook</a>
-        <a href="" class="btn btn--bg-dark btn--hover-enlarge">Google+</a>
-      </section>
+    <title>Ali Masarwe</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/common-vars.css" />
+    <!-- <link rel="stylesheet" href="css/menu.css" /> -->
+    <link rel="stylesheet" href="index.css" />
+</head>
+
+<body class="block--font-fam-sans-serief">
+    <header
+        class="flex-container flex-container--col-direction flex-container--center-center container--ligh-bg container--full-height">
+        <!-- <input type="checkbox" class="toggler">
+        <div class="hamburger">
+            <div></div>
+        </div>
+        <div class="menu">
+            <div>
+                <div>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div> -->
+        <h1 class="header__title">Software &amp; Algorithm Engineer</h1>
+        <p class="header__remark">The sky is the limit</p>
+        <hr class="header__hr" />
+        <section class="header__social-meadia">
+            <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
+            <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-github"></i></i> GitHub</a>
+            <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-twitter"></i> twitter</a>
+            <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-facebook-f"></i> facebook</a>
+            <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-google-plus"></i> Google+</a>
+        </section>
     </header>
-  </body>
+</body>
+
 </html>
