Added the navbar

--- a/index.html
+++ b/index.html
@@ -9,29 +9,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/common-vars.css" />
-    <!-- <link rel="stylesheet" href="css/menu.css" /> -->
+    <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="index.css" />
 </head>
 
 <body class="block--font-fam-sans-serief">
     <header
         class="flex-container flex-container--col-direction flex-container--center-center container--ligh-bg container--full-height">
-        <!-- <input type="checkbox" class="toggler">
-        <div class="hamburger">
-            <div></div>
-        </div>
-        <div class="menu">
-            <div>
+        <div class="menu-wrap">
+            <input type="checkbox" class="toggler">
+            <div class="hamburger"><div></div></div>
+            <div class="menu">
+              <div>
                 <div>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
+                  <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                  </ul>
                 </div>
+              </div>
             </div>
-        </div> -->
+          </div>
+        </div>
         <h1 class="header__title">Software &amp; Algorithm Engineer</h1>
         <p class="header__remark">The sky is the limit</p>
         <hr class="header__hr" />
