Template for the about page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="block--font-fam-sans-serief">
-    <header
+    <section
         class="flex-container flex-container--col-direction flex-container--center-center container--ligh-bg container--full-height">
         <div class="menu-wrap">
             <input type="checkbox" class="toggler">
@@ -24,7 +24,7 @@
                 <div>
                   <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="pages/about.html">About</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
@@ -44,7 +44,7 @@
             <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-facebook-f"></i> facebook</a>
             <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-google-plus"></i> Google+</a>
         </section>
-    </header>
+    </section>
 </body>
 
 </html>
