--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <p class="header__remark">The sky is the limit</p>
         <hr class="header__hr" />
         <section class="header__social-meadia">
-            <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
-            <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-github"></i></i> GitHub</a>
-            <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-twitter"></i> twitter</a>
-            <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-facebook-f"></i> facebook</a>
-            <a href="" class="btn btn--bg-dark btn--hover-enlarge"><i class="fa fa-google-plus"></i> Google+</a>
+            <a href="" class="btn btn--bg-dark element--hover-enlarge ele--w-18"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
+            <a href="" class="btn btn--bg-dark element--hover-enlarge ele--w-18"><i class="fa fa-github"></i></i> GitHub</a>
+            <a href="" class="btn btn--bg-dark element--hover-enlarge ele--w-18"><i class="fa fa-twitter"></i> twitter</a>
+            <a href="" class="btn btn--bg-dark element--hover-enlarge ele--w-18"><i class="fa fa-facebook-f"></i> facebook</a>
+            <a href="" class="btn btn--bg-dark element--hover-enlarge ele--w-18"><i class="fa fa-google-plus"></i> Google+</a>
         </section>
     </section>
 </body>
