--- a/pages/about.html
+++ b/pages/about.html
@@ -36,11 +36,13 @@
         <h1 class="header__title">Ali Masarwe</h1>
         <hr class="header__hr" />
         <section class="main__description grid-container">
+            <!-- &#9; tab -->
             <p class="description__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ipsum rem est quidem quis ad mollitia veniam doloremque amet nemo? Quis fuga fugiat eligendi dolorem accusamus nesciunt reprehenderit? Alias, voluptatum!
-                Obcaecati in voluptatum sapiente quasi voluptatibus nulla, unde dignissimos dolor nobis quod adipisci perferendis voluptas aliquid repudiandae possimus at ipsam deserunt modi dolores explicabo doloremque? Autem vero voluptates vel veritatis.
-                Saepe, inventore nihil recusandae doloribus omnis, impedit distinctio ad commodi aliquam autem adipisci consequuntur ex enim! Nobis iusto eveniet quam quod fuga sequi consequatur ducimus tempora quas. Officia, unde consequuntur.
-                Doloremque qui nihil delectus quam dolores? Omnis asperiores nostrum repellendus saepe sed fugit neque ipsa voluptatem totam! Magni, mollitia soluta incidunt hic, consequuntur enim, labore ipsam quia suscipit distinctio perferendis.
+                I am an excellent Bachelor of Computer Science from Ariel University.<br />
+                I discovered my passion for coding & problem solving since high school, then decided to make this passion my career, and started learning computer science at ariel university .<br />
+                &Tab;&#x21e8;Programming languages:  c#, delphi (from hig-school) c\c++, java &amp; python (from university)<br />
+                &Tab;&#x21e8;Projects: DNA-Analyzer (c++), BesKit (python), Trafic Light Detector (python).<br />
+
             </p>
             <img src="" alt="" class="description-pic">
         </section>
