--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,26 +13,29 @@
     <link rel="stylesheet" href="../index.css" />
     <link rel="stylesheet" href="../css/about.css" />
 </head>
+
 <body class="block--font-fam-sans-serief">
     <section
         class="flex-container flex-container--col-direction flex-container--center-center container--ligh-bg container--full-height">
         <div class="menu-wrap">
             <input type="checkbox" class="toggler">
-            <div class="hamburger"><div></div></div>
-            <div class="menu">
-              <div>
-                <div>
-                  <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                  </ul>
-                </div>
-              </div>
+            <div class="hamburger">
+                <div></div>
             </div>
-          </div>
+            <div class="menu">
+                <div>
+                    <div>
+                        <ul>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
         <h1 class="header__title">Ali Masarwe</h1>
         <hr class="header__hr" />
@@ -39,13 +43,28 @@
             <!-- &#9; tab -->
             <p class="description__text">
                 I am an excellent Bachelor of Computer Science from Ariel University.<br />
-                I discovered my passion for coding & problem solving since high school, then decided to make this passion my career, and started learning computer science at ariel university .<br />
-                &Tab;&#x21e8;Programming languages:  c#, delphi (from hig-school) c\c++, java &amp; python (from university)<br />
-                &Tab;&#x21e8;Projects: DNA-Analyzer (c++), BesKit (python), Trafic Light Detector (python).<br />
+                I discovered my passion for coding & problem solving since high school, then decided to make this
+                passion my career, and started learning computer science at ariel university .<br /><br />
+                
+                <span class="ele--secondary-header">Skills:</span><br />
+                &Tab;&#x21e8;Programming languages: c#, delphi (from hig-school) c\c++, java &amp; python (from
+                university)<br />
+                &Tab;&#x21e8;Tools: git, linux, google cloud, SQL and noSQL databases, {More Details}<br />
+                &Tab;&#x21e8;Skills: Problem Solving &amp; Algorithmic thinking, {More Details}<br />
+                <br />
+                <span class="ele--secondary-header">Projects:</span><br />
+                &Tab;&#x21e8;DNA-Analyzer (c++): CLI software designed as MVC (Model View Control) to be modular {More
+                Details}.<br />
+                &Tab;&#x21e8;BesKit (python): {More Details}.<br />
+                &Tab;&#x21e8;Trafic Light Detector (python): {More Details}.<br />
 
             </p>
-            <img src="" alt="" class="description-pic">
+            <div class="description-pic">
+                <img src="../img/IMG_20201113_173429.jpg" alt="" class="description__img">
+            </div>
+
         </section>
     </section>
 </body>
+
 </html>
