--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="pages/about.html">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="pages/portfolio.html">Portfolio</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                   </ul>
