--- a/pages/about.html
+++ b/pages/about.html
@@ -28,7 +28,7 @@
                         <ul>
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="#">About</a></li>
-                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
